# list-web-scraper

./: Cargo.toml  LICENSE  README.md  test.yaml
src/: error.rs  main.rs  scraper.rs
src/cli/: args.rs  config_input.rs  mod.rs  output.rs
src/config/: lua.rs  mod.rs  site.rs  test.rs
testdata/: html_config.yaml
